# sumotraci-greenwave

./: .env  .gitignore  README.md  ideas.md  improvements.md  old_execution.md  pyproject.toml  setup_environment.py
artigos/: agencia-brasil.txt  article.py  article2.py  dados_estatisticos_detran_df.txt  plano_diretor_transporte_df.txt  pseudocodigo  pseudocodigo2
future-works/: README.md
src/: accident.py  calc_density.py  config.py  emergency_call.py  emergency_monitor.py  loading.py  main.py  main_osm.py  net.net.xml  optimization_green_wave.py  optimization_reroute.py  requirements.txt  run_cases.py  utils.py  xml_to_csv.py
src/ceilandia/: osm.netccfg  osm.passenger.trips.xml  osm.polycfg  osm.sumocfg
src/data/: .gitkeep  config.sumocfg  road.net.xml
src/notebooks/: Auto_Design_Plus_Leonan.ipynb  nb_results.ipynb  notebook_emissions.ipynb  notebook_emissions_default_vehicle.ipynb  notebook_emissions_emergency_vehicle.ipynb  notebook_evs_all_data.ipynb  notebook_summary.ipynb  notebook_test.ipynb  notebook_tripinfo.ipynb  notebook_tripinfo_emergency.ipynb  notebook_tripinfo_passenger.ipynb  to_study.ipynb  trip_lane.ipynb
src/scripts/: cases.csv  generate_emissions_csvs.py  generate_summary_csvs.py  generate_tripinfo_csvs.py  merge_csvs.py  run_cases.py
src/study/: avaliacao_de_desempenho.md  cod_tecnica.md
src/transform/: xml_to_csv.py
