[tool.poetry]
name = "sumotraci-greenwave"
version = "0.1.0"
description = ""
authors = ["holynacll"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sumo = "^2.3.8"
eclipse-sumo = "^1.21.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
